[package]
name = "cogset"
version = "0.1.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

license = "MIT/Apache-2.0"
keywords = ["data-science", "cluster", "clustering"]
homepage = "https://github.com/huonw/cogset"
repository = "https://github.com/huonw/cogset"
documentation = "http://huonw.github.io/cogset/cogset/"

description = """
Generic implementations of clustering algorithms. Includes DBSCAN.
"""
