[package]
name = "cogset"
version = "0.2.0"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

license = "MIT/Apache-2.0"
keywords = ["data-science", "cluster", "clustering"]
homepage = "https://github.com/huonw/cogset"
repository = "https://github.com/huonw/cogset"
documentation = "http://huonw.github.io/cogset/cogset/"

description = """
Generic implementations of clustering algorithms. Includes k-means, DBSCAN and OPTICS.
"""

[features]
unstable = []

[dependencies]
order-stat = "0.1"

[dev-dependencies]
rand = "^0.3.11"
quickcheck = "^0.2.21"
permutohedron = "^0.1.6"
